# lilc

./: CMakeLists.txt  README.md
lib/: CmakeLists.txt  cfu.c  cfu.h  cfuhash.c  cfuhash.h  cfustring.c  cfustring.h  kvec.h
src/: CMakeLists.txt  ast.c  ast.h  codegen.c  codegen.h  lex.c  lex.h  parse.c  parse.h  token.c  token.h  util.c  util.h
test/: CMakeLists.txt  add_2.lilc  test.c
test/codegen/: arith_basic.result
test/lexer/: add_2.lexout  add_2.lilc  add_2.tok  add_sub.lilc  add_sub.tok  arith_basic.tok  arith_parens.tok  func_basic.tok  funccall.tok  funcdef.tok  ident.tok
test/parser/: add_2.ast  add_sub.ast  arith_basic.ast  arith_parens.ast  func_basic.ast  funccall.ast  funcdef.ast  if_else.ast
test/src_examples/: arith_basic.lilc  arith_parens.lilc  cmp_basic.lilc  func_basic.lilc  func_no_params.lilc  ident.lilc  if_else.lilc
